added glfw window management